--- a/wildcamera-api/templates/index.html
+++ b/wildcamera-api/templates/index.html
@@ -2,14 +2,41 @@
 <html>
 <head>
     <title>Wildlife camera</title>
+    <link href="static/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-<h1>Wildlife camera</h1>
 
-<h2>Useful links</h2>
-<ul id="links"></ul>
-<h2>Actions</h2>
-<button id="kill-btn">Kill radio</button>
+<main>
+    <div class="container py-4">
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">Wildlife camera</h1>
+                <p class="col-md-8 fs-4">Left the device somewhere and take images when some motion is detected</p>
+            </div>
+        </div>
+
+
+        <div class="row align-items-md-stretch">
+            <div class="col-md-6">
+                <div class="h-100 p-5 bg-light border rounded-3">
+                    <h2>Useful links</h2>
+                    <p>Links to navigate different services</p>
+                    <ul id="links"></ul>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="h-100 p-5 bg-light border rounded-3">
+                    <h2>Kill radio</h2>
+                    <p>To have a larger battery life, you can kill the radio communications (WiFi and Bluetooth).
+                        The connections will be restored when the device is restarted</p>
+                    <button id="kill-btn" class="btn btn-danger" type="button">Kill radio</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</main>
+
 <script>
     function generateLinks()  {
         let host = window.location.hostname
@@ -42,6 +69,11 @@
 
     document.addEventListener('DOMContentLoaded', generateLinks, false);
     document.addEventListener('DOMContentLoaded', killBtn, false);
+
+
+
+
+
 
 
 </script>
